--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎃 Project Game</title>
-    <link rel="stylesheet" href="./src/style/global.css">
+    <link rel="stylesheet" href="src/style/global.css">
 </head>
 <body>
     <canvas></canvas>
-    <script src="./src/js/constant.js"></script>
-    <script src="./src/js/classes/Ground.js"></script>
-    <script src="./src/js/classes/Player.js"></script>
-    <script src="./src/js/classes/Enemy.js"></script>
-    <script src="./src/js/classes/Platform.js"></script>
-    <script src="./src/js/classes/Bullet.js"></script>
-    <script src="./src/js/index.js"></script>
+    <script src="src/js/constant.js"></script>
+    <script src="src/js/classes/Ground.js"></script>
+    <script src="src/js/classes/Player.js"></script>
+    <script src="src/js/classes/Enemy.js"></script>
+    <script src="src/js/classes/Platform.js"></script>
+    <script src="src/js/classes/Bullet.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 </html>
